add: use -Djava.ext.dirs to import Java IME file